fix(backend): replace printStackTrace by logging output